Closed Bug 482182 Opened 17 years ago Closed 17 years ago

" Files" portion of HTML Complete save process is not localizable

Categories

(Camino Graveyard :: Downloading, defect)

All
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: bugzilla-graveyard, Assigned: bugzilla-graveyard)

Details

(Whiteboard: l10n)

Attachments

(1 file, 1 obsolete file)

Attached patch fix v1.0 (obsolete) — Splinter Review
Dave Haas commented way back in the day that it should be, but nobody ever got around to it. Since I was cleaning up SaveHeaderSniffer anyway, I figured I'd go ahead and fix this while I was at it. The other changes besides the added line in localizable.strings.in were things Smokey asked me to fix while I was in there, just moving things around and the like.
Attachment #366255 - Flags: review?(trendyhendy2000)
Comment on attachment 366255 [details] [diff] [review] fix v1.0 >+ NSString* htmlCompleteFolderName = [NSString stringWithFormat:@"%@ %@", This is too English-centric; it assumes all languages will use the same word order. The format string should be @"%@ Format", localized.
Attached patch fix v1.01Splinter Review
Addresses comment 1.
Attachment #366255 - Attachment is obsolete: true
Attachment #366456 - Flags: review?(trendyhendy2000)
Attachment #366255 - Flags: review?(trendyhendy2000)
Comment on attachment 366456 [details] [diff] [review] fix v1.01 Works fine. Though as Stuart alluded to, this may not always be a suffix string.
Attachment #366456 - Flags: review?(trendyhendy2000) → review+
(In reply to comment #3) > (From update of attachment 366456 [details] [diff] [review]) > Works fine. Though as Stuart alluded to, this may not always be a suffix > string. Which is why the whole string is now localizable ;)
Attachment #366456 - Flags: superreview?(mikepinkerton)
Attachment #366456 - Flags: superreview?(mikepinkerton) → superreview+
Landed on cvs trunk.
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: