Bug 482182 - ' Files' portion of HTML Complete folder name is not localizable (and better group the download-related strings in the .strings file).  Patch by Chris Lawson <cl-bugs-new@chrislawson.net>, r=hendy, sr=pink