camino/src/download/SaveHeaderSniffer.mm
@@ -435,7 +435,9 @@ nsHeaderSniffer::InitiateDownload(nsISupports* inSourceData, nsString& inFileNam
       PRInt32 index = nameMinusExt.RFind(".");
       if (index >= 0)
           nameMinusExt.Left(nameMinusExt, index);
-      nameMinusExt += NS_LITERAL_STRING(" Files"); // XXXdwh needs to be localizable!
+      NSString* htmlCompleteFolderName = [NSString stringWithFormat:NSLocalizedString(@"HTMLCompleteFolderSuffixString", nil),
+                                                     [NSString stringWith_nsAString:nameMinusExt]];
+      CopyUTF8toUTF16([htmlCompleteFolderName UTF8String], nameMinusExt);
       filesFolder->SetLeafName(nameMinusExt);
       PRBool exists = PR_FALSE;
       filesFolder->Exists(&exists);
